--- a/public/profile.css
+++ b/public/profile.css
@@ -59,7 +59,7 @@ button:focus {
 
 .navlink {
     font-family: 'Montserrat Light';
-    color: rgb(94, 69, 37);
+    color: rgb(153, 113, 61);   
     font-size: 1.5vw;
     padding-right: 3vw;
     display: inline-block;
