--- a/public/signup.css
+++ b/public/signup.css
@@ -71,6 +71,7 @@ button:focus {
     padding-left: 20px;
     letter-spacing: 1px;
     margin-top: 2.5vw;
+    text-align: center;
 }
 
 .signup_btn {
